[gd_scene load_steps=2 format=3 uid="uid://brr5bbjb1q1ld"]

[ext_resource type="Script" uid="uid://yi8fltptmyac" path="res://ui/components/save_file_ui.gd" id="1_tx3wk"]

[node name="SaveFileUI" type="HSplitContainer"]
custom_minimum_size = Vector2(0, 84)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -259.5
offset_top = -48.0
offset_right = 259.5
offset_bottom = 36.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 420
script = ExtResource("1_tx3wk")

[node name="BtnLabel" type="Button" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "File Name"
alignment = 0

[node name="BtnTrash" type="Button" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "X"

[connection signal="pressed" from="BtnLabel" to="." method="_on_btn_label_pressed"]
[connection signal="pressed" from="BtnTrash" to="." method="_on_btn_trash_pressed"]
